# django-oscar-wfrs

./: .gitignore  .gitlab-ci.yml  Dockerfile  MANIFEST.in  Makefile  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test.sh  tox.ini
docs/: Makefile  changes.rst  concepts.rst  conf.py  fraud.rst  index.rst  install.rst  integration.rst  internals.rst
sandbox/: settings.py  urls.py
sandbox/basket/: __init__.py  apps.py  config.py  models.py
src/wellsfargo/: __init__.py  admin.py  apps.py  config.py  handlers.py  methods.py  model_views.py  models.py  search_indexes.py  settings.py  utils.py
wellsfargo/: __init__.py  admin.py  config.py  fields.py  handlers.py  methods.py  models.py  permissions.py  search_indexes.py  settings.py  tasks.py  utils.py
wellsfargo/api/: app.py  exceptions.py  permissions.py  serializers.py  views.py
wellsfargo/connector/: actions.py
wellsfargo/core/: applications.py  constants.py  exceptions.py  fields.py  mixins.py  structures.py  widgets.py
wellsfargo/dashboard/: app.py  forms.py  tables.py  views.py  widgets.py
wellsfargo/migrations/: 0001_initial.py  0002_auto_20160523_2127.py  0002_auto_20160729_1512.py  0003_auto_20160524_1127.py  0003_financingplan_is_default_plan.py  0004_auto_20160627_2142.py  0004_auto_20161122_1357.py  0005_auto_20161122_1503.py  0006_apicredentials.py  0007_financingplan_allow_credit_application.py  0008_auto_20170117_1413.py  0009_auto_20160729_1432.py  0009_drop_oscar_accounts_2.py  0009_drop_oscar_accounts_3.py
wellsfargo/templatetags/: wfrs_default_plan.py  (+1 more)
(+236 files in other folders)
